Add "Fix Save" feature
Adds feature to fix save files with custom skin tones,
which prevent multiplayer play with a "Corrupt Data" error.
The fix updates the skin tone to a chosen capcom preset.

--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -128,6 +128,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="fixSave">
+          <property name="text">
+           <string>Fix Save</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
@@ -159,7 +166,7 @@
      <x>0</x>
      <y>0</y>
      <width>1026</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
